# acoustid-match

./: .gitignore  MANIFEST.in  Makefile  README.md  manage.py  requirements.txt  setup.cfg  setup.py
config/: settings.py  urls.py  wsgi.py
config/static/: style.css
config/templates/: base.html
config/templates/admin/: base_site.html
config/templates/registration/: login.html
fingerprints/: admin.py  apps.py  defaults.py  forms.py  models.py  tests.py
fingerprints/management/commands/: scan.py
fingerprints/migrations/: 0001_initial.py  0002_alter_fingerprint_id.py
fingerprints/static/fingerprints/: fputils.js  jquery.json-viewer.css
fingerprints/templates/fingerprint-admin/: change_form.html
fingerprints/templates/fingerprint-admin/includes/: fieldset.html
fingerprints/templates/fingerprints/forms/: fingerprint.html
fingerprints/templatetags/: fingerprint.py
