[metadata]
name = acoustid-match
version = attr: fingerprints.__version__
author = dnknth
description = Demonstration of the AcoustID algorithm, packaged as a Django app
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dnknth/acoustid-match
license_file = LICENSE.txt
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries

[options]
packages = find:
include_package_data = True
install_requires =
    setuptools
    Django
    django-app-defaults
    psycopg2-binary
    pyacoustid
    
[bdist_wheel]
universal = 1
